deployments/bitnami/minio/ingress.yml
# ingress-with-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /  
spec:
  tls:
    - hosts:
      - 192.168.13.102
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for todos.retro.io
      secretName: minio1-tls
  rules:
  - host: 192.168.13.101
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: # the backend Service to route requests to
            name: minio1
            port:
              number: 9000
